--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=HaCTimes
+name=HaCTimers
 version=0.1.0
 author=Harvy Aronales Costiniano
 maintainer=Harvy Aronales Costiniano <email@domain.com>
