--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=hactimers
-version=0.1.0
+name=HACTimers
+version=0.1.1
 author=Harvy Aronales Costiniano
 maintainer=Harvy Aronales Costiniano <email@domain.com>
 sentence=An event driven arduino Timer.
 paragraph=An event driven Timer for arduino which can be used as Tick Tack, Tick & toggle, Up & Down Counter and Time ON/OFF delay.
-category=Timer
+category=Timing
 url=https://github.com/SyntaxHarvy/HACTimers
 architectures=*
