Updated the src and library properties
Updated the src and library properties

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=HaCTimers
-version=0.1.2
+version=0.1.3
 author=Harvy Aronales Costiniano
 maintainer=Harvy Aronales Costiniano <email@domain.com>
 sentence=An event driven arduino Timer.
 paragraph=An event driven Timer for arduino which can be used as Tick Tack, Tick & toggle, Up & Down Counter and Time ON/OFF delay.
 category=Timing
 url=https://github.com/SyntaxHarvy/HACTimers
-architectures=*
+architectures=esp8266, esp32
